[package]
name = "archive-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-engine = { path = "../archive-engine" }

bevy_ecs = "0.6.0"
cgmath = "0.18.0"
wgpu = { version = "0.12", default-features = false }
winit = "0.26.0"
log = "0.4"
instant = "0.1"
bytemuck = { version = "1.7.3", features=["derive", "min_const_generics"] }
image = { version = "0.23.14", default-features = false, features=["png"] }

[features]
default = ["desktop"]
desktop = ["wgpu/default"]
webgl = ["wgpu/webgl"]
