[package]
name = "archive-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-engine = { path = "../archive-engine" }

# uses the new queue API: https://github.com/genusistimelord/wgpu_glyph/tree/query
wgpu_glyph = { path = "../../wgpu_glyph" } # "0.16"

hecs = "0.7"
cgmath = "0.18.0"
futures = "0.3"
wgpu = { version = "0.12", default-features = false }
once_cell = "1.9"

# fixed and its related packages are small and a bit sus, use exact versions
fixed = { version = "=1.12.0", features=["serde"] }
fixed-macro = "=1.1.1"

winit = "0.26"
log = "0.4"
instant = "0.1"
bytemuck = { version = "1.7", features=["derive", "min_const_generics"] }
image = { version = "0.23", default-features = false, features=["png"] }

[features]
default = ["desktop"]
desktop = ["wgpu/default"]
webgl = ["wgpu/webgl"]
