[package]
name = "archive-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
once_cell = "1.9"
log = "0.4"

bevy_ecs = "0.6.0"
cgmath = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"