[package]
name = "archive-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
once_cell = "1.9"
log = "0.4"
rand = "0.8"
rand_pcg = "0.3.1"

hecs = "0.7"
# fixed and its related packages are small and a bit sus, use exact versions
fixed = { version = "=1.12.0", features=["serde"] }
fixed-macro = "=1.1.1"
derive_more = "0.99"

cgmath = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
bimap = "0.6.2"