[package]
name = "archive-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-client = { path = "../archive-client" }
archive-engine = { path = "../archive-engine" }

tokio = { version = "1", features = ["full"] }

rand = "0.8"
winit = "0.26"
env_logger = "0.9.0"