[package]
name = "archive-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-client = { path = "../archive-client" }
archive-engine = { path = "../archive-engine" }
# used only to pull some native webrtc stuff
archive-server = { path = "../archive-server" }

anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3.3"

# webrtc = "0.4.0"
bytes = "1.1.0"

tokio-tungstenite = "0.17.1"

rand = "0.8"
winit = "0.26"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.14"