[package]
name = "archive-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.8.0"
anyhow = "1.0.52"
structopt = "0.3.25"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.6", features=["env-filter"] }
rustls = "0.20.2"
rustls-pemfile = "0.2.1"
directories-next = "2.0.0"
rcgen = "0.7.0"
tokio = { version = "1.15.0", features=["full"] }
futures-util = "0.3.19"
warp = { version = "0.3.2", features=["tls"] }

#bevy_ecs = "0.6.0"
#cgmath = "0.18.0"
