[package]
name = "archive-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive-engine = { path = "../archive-engine" }

anyhow = "1.0"
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"

base64 = "0.13.0"
chrono = "0.4.19"
clap = "3.0.10"
env_logger = "0.9.0"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4.14"

webrtc = "0.4.0"
bytes = "1.1.0"

hecs = "0.7"
# fixed and its related packages are small and a bit sus, use exact versions
fixed = { version = "=1.12.0", features=["serde"] }
fixed-macro = "=1.1.1"
derive_more = "0.99"
