[package]
name = "archive-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
archive-client = { path = "../archive-client", default-features = false, features = ["webgl"] }
archive-engine = { path = "../archive-engine" }

futures = "0.3"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
console_log = "0.2.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen-futures = "0.4.28"
winit = "0.26"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",

    # for fetch requests
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",

    # for webrtc
    "MessageEvent",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",

#    "Document",
#    "Navigator",
#    "Node",
#    "NodeList",
#    "Gpu",
#    "GpuAdapter",
#    "GpuAddressMode",
#    "GpuBindGroup",
#    "GpuBindGroupDescriptor",
#    "GpuBindGroupEntry",
#    "GpuBindGroupLayout",
#    "GpuBindGroupLayoutDescriptor",
#    "GpuBindGroupLayoutEntry",
#    "GpuBlendComponent",
#    "GpuBlendFactor",
#    "GpuBlendOperation",
#    "GpuBlendState",
#    "GpuBuffer",
#    "GpuBufferBinding",
#    "GpuBufferBindingLayout",
#    "GpuBufferBindingType",
#    "GpuBufferDescriptor",
#    "GpuBufferUsage",
#    "GpuCanvasContext",
#    "GpuCanvasConfiguration",
#    "GpuColorDict",
#    "GpuColorTargetState",
#    "GpuColorWrite",
#    "GpuCommandBuffer",
#    "GpuCommandBufferDescriptor",
#    "GpuCommandEncoder",
#    "GpuCommandEncoderDescriptor",
#    "GpuCompareFunction",
#    "GpuCompilationInfo",
#    "GpuCompilationMessage",
#    "GpuCompilationMessageType",
#    "GpuComputePassDescriptor",
#    "GpuComputePassEncoder",
#    "GpuComputePipeline",
#    "GpuComputePipelineDescriptor",
#    "GpuCullMode",
#    "GpuDepthStencilState",
#    "GpuDevice",
#    "GpuDeviceDescriptor",
#    "GpuDeviceLostInfo",
#    "GpuDeviceLostReason",
#    "GpuErrorFilter",
#    "GpuExtent3dDict",
#    "GpuFeatureName",
#    "GpuFilterMode",
#    "GpuFragmentState",
#    "GpuFrontFace",
#    "GpuImageCopyBuffer",
#    "GpuImageCopyTexture",
#    "GpuImageDataLayout",
#    "GpuIndexFormat",
#    "GpuLoadOp",
#    "GpuMapMode",
#    "GpuMultisampleState",
#    "GpuObjectDescriptorBase",
#    "GpuOrigin2dDict",
#    "GpuOrigin3dDict",
#    "GpuOutOfMemoryError",
#    "GpuPipelineDescriptorBase",
#    "GpuPipelineLayout",
#    "GpuPipelineLayoutDescriptor",
#    "GpuPipelineStatisticName",
#    "GpuPowerPreference",
#    "GpuPrimitiveState",
#    "GpuPrimitiveTopology",
#    "GpuProgrammableStage",
#    "GpuQuerySet",
#    "GpuQuerySetDescriptor",
#    "GpuQueryType",
#    "GpuQueue",
#    "GpuRenderBundle",
#    "GpuRenderBundleDescriptor",
#    "GpuRenderBundleEncoder",
#    "GpuRenderBundleEncoderDescriptor",
#    "GpuRenderPassColorAttachment",
#    "GpuRenderPassDepthStencilAttachment",
#    "GpuRenderPassDescriptor",
#    "GpuRenderPassEncoder",
#    "GpuRenderPipeline",
#    "GpuRenderPipelineDescriptor",
#    "GpuRequestAdapterOptions",
#    "GpuSampler",
#    "GpuSamplerBindingLayout",
#    "GpuSamplerBindingType",
#    "GpuSamplerDescriptor",
#    "GpuShaderModule",
#    "GpuShaderModuleDescriptor",
#    "GpuShaderStage",
#    "GpuStencilFaceState",
#    "GpuStencilOperation",
#    "GpuStorageTextureAccess",
#    "GpuStorageTextureBindingLayout",
#    "GpuStoreOp",
#    "GpuSupportedFeatures",
#    "GpuSupportedLimits",
#    "GpuTexture",
#    "GpuTextureAspect",
#    "GpuTextureBindingLayout",
#    "GpuTextureDescriptor",
#    "GpuTextureDimension",
#    "GpuTextureFormat",
#    "GpuTextureSampleType",
#    "GpuTextureUsage",
#    "GpuTextureView",
#    "GpuTextureViewDescriptor",
#    "GpuTextureViewDimension",
#    "GpuUncapturedErrorEvent",
#    "GpuUncapturedErrorEventInit",
#    "GpuValidationError",
#    "GpuVertexAttribute",
#    "GpuVertexBufferLayout",
#    "GpuVertexFormat",
#    "GpuVertexState",
#    "GpuVertexStepMode",
#    "HtmlCanvasElement",
#    "Window",
]}
